--- a/src/Components/TelaInicial/TelaInicial.css
+++ b/src/Components/TelaInicial/TelaInicial.css
@@ -28,6 +28,7 @@ body{
 }
     .crie{
         border: 2px solid #C1121F;
+        background-color: #FDF0D5;
         border-radius: 8px;
         color: #C1121F;
         width: 353px;
