--- a/src/Components/SuasSecoes/SuasSecoes.css
+++ b/src/Components/SuasSecoes/SuasSecoes.css
@@ -21,7 +21,7 @@
   background-color: white;
   padding: 30px;
   border-radius: 16px;
-  box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   flex: 1 1 280px;
   max-width: 280px;
   text-align: center;
