--- a/src/Components/LoginUsuario/LoginUsuario.css
+++ b/src/Components/LoginUsuario/LoginUsuario.css
@@ -1,9 +1,33 @@
+#login-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 #header-login {
   color: #780000;
 }
 
 #mensagem {
   color: #780000;
+}
+
+.log {
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+}
+
+.inp-log {
+  height: 63px;
+  width: 470px;
+  border-radius: 10px;
+  background-color: #C3ACA0;
+  border: none;
+  box-shadow: 2px 3px 7px 000.1;
+  display: flex;
+  flex-direction: column;
+
 }
 
 .esqueci-senha {
