--- a/src/Components/CadastroUsuario/CadastroUsuario.css
+++ b/src/Components/CadastroUsuario/CadastroUsuario.css
@@ -1,52 +1,74 @@
-.cadastro-container {
+.container-cadastro {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.coluna-esquerda {
+  width: 50vw;
+  height: 95vh;
+  background: url("principal.jpg");
+  background-position: center center;
+  border-radius: 30px;
+  margin: 1% 0 1% 2%;
+  background-size: cover;
+}
+
+.coluna-direita {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #D9CCC5;
+  border-radius: 30px;
+  width: 50vw;
+  height: 95vh;
+}
+
+.titulo-cadastro {
+  font-weight: bolder;
+}
+
+.titulo-cadastro, .texto-cadastrado {
   color: #261610;
+}
+
+.descricao-cadastro {
+  margin: 18px 0 5% 0;
+  color: #A27A6B;
+}
+
+.formulario-cadastro {
+  display: flex;
+  flex-direction: column;
+  width: 50%;
   gap: 20px;
 }
 
-.for-cad {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  gap: 25px;
+.texto-cadastrado {
+  text-align: center;
+  margin-top: 5%;
 }
 
-input {
-  height: 63px;
-  width: 470px;
-  border-radius: 10px;
-  background-color: #C3ACA0;
-  border: none;
-}
-
-.cad {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-
-#header-cadastro {
-  color: #780000;
-}
-
-.mensagem {
-  color: #780000;
-}
-
-.ja-tem-cadastro {
-  margin-top: 12px;
-  color: #333;
-}
-
-.link-login {
-  color: #004aad;
+.link-cadastrado {
+  color: #261610;
   cursor: pointer;
   text-decoration: underline;
+  margin-left: 4px;
 }
 
-.link-login:hover {
-  color: #002f7a;
+.link-cadastrado:hover {
+  color: #8B6047;
+}
+
+@media (max-width: 1023px) {
+  .titulo-cadastro{
+    margin-top: 10%;
+  }
+}
+
+@media (max-width: 767px) {
+  .descricao-cadastro{
+    font-size: 14px;
+  }
 }
