--- a/src/Components/Dashboard/Dashboard.css
+++ b/src/Components/Dashboard/Dashboard.css
@@ -1,15 +1,13 @@
 .dashboard-container {
-  padding: 2rem;
-  max-width: 1000px;
   margin: 0 auto;
   color: #261610;
   display: flex;
+  align-items: center;
   flex-direction: column;
 }
 
 .container-max {
-  display: flex;
-  flex-direction: column;
+  margin-bottom: 5%;
 }
 
 h3 {
@@ -18,23 +16,199 @@ h3 {
 }
 
 .dashboard-grid {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
   gap: 1.5rem;
+  display: flex;
+  flex-direction: column;
 }
 
 .card {
   background-color: #C3ACA0;
   border: 1px solid #261610;
-  padding: 1.5rem;
+  padding: 0 1.5rem;
   border-radius: 10px;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+  width: 100%;
+  height: 100%;
+  min-height: 175px;
 }
 
-#card-total-livros {
+.linha-dois {
+  display: flex;
+}
+
+.sem-circulo {
+  border-right: 2px solid #261610;
+  padding-right: 10%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.separar-linha {
+  padding-left: 10%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.top-generos {
+  display: grid;
+  grid-template-columns: 2fr;
   background-color: #C3ACA0;
   border: 1px solid #261610;
   padding: 1.5rem;
   border-radius: 10px;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+}
+
+.card-grafico {
+  display: grid;
+  grid-template-columns: 2fr;
+  background-color: #C3ACA0;
+  border: 1px solid #261610;
+  padding: 1.5rem;
+  border-radius: 10px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+}
+
+.direcao-icon {
+  display: flex;
+  gap: 5px;
+  text-indent: 5px;
+  line-height: 1;
+}
+
+.circulo {
+  border: 2px solid #261610;
+  border-radius: 200px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 50px;
+  height: 50px;
+}
+
+.icons {
+  height: 24px;
+  width: 24px;
+}
+
+.card-total-livros {
+  width: 68vw;
+  background-color: #C3ACA0;
+  border: 1px solid #261610;
+  border-radius: 10px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1.5rem;
+}
+
+.segunda-linha {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 16px;
+  gap: 20px;
+}
+
+.terceira-linha {
+  display: flex;
+  width: 100%;
+  max-height: 180px;
+  justify-content: space-between;
+}
+
+.valores {
+  width: 16vw;
+}
+
+.top-generos {
+  width: 46vw;
+}
+
+.numeros-informativos {
+  font-size: 30px;
+  font-weight: bold;
+}
+
+#borda-lidos {
+  border-left: 1px solid #402718;
+  border-right: 1px solid #402718;
+  padding: 0 10% 0 10%;
+}
+
+#borda-nao-lidos {
+  border-right: 1px solid #402718;
+  padding-right: 10%;
+}
+
+p {
+  font-size: 16px;
+}
+
+@media (max-width: 1023px) {
+  .dashboard-grid {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 15px;
+  }
+
+
+  .segunda-linha {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 15px;
+  }
+
+  .terceira-linha {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 15px;
+    max-height: 100%;
+    width: 100%;
+  }
+
+  .card-total-livros {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 5%;
+    width: 100%;
+  }
+
+  .direcao-icon {
+    border-bottom: 2px solid #402718;
+    width: 100%;
+    line-height: 1.5;
+    display: flex;
+    align-items: center;
+  }
+
+  .card {
+    width: 100%;
+  }
+
+  .top-generos {
+    width: 100%;
+  }
+
+  #borda-lidos,
+  #borda-nao-lidos {
+    border-left: none;
+    border-right: none;
+    padding: 0;
+  }
+
+  h3 {
+    padding-top: 30px;
+    font-size: 24px;
+  }
+
 }
