--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,13 +1,14 @@
 .header-superior {
-    width: 100vw;
+    width: 95vw;
     display: flex;
     justify-content: center;
+    margin-top: 2%;
 }
 
 #botao-voltar {
     border: 2px solid #402718;
     border-radius: 10px;
-    padding: 10px 22px 14px 30px;
+    padding: 10px 22px 10px 22px;
     color: #402718;
     display: flex;
     align-items: center;
