--- a/src/Components/LoginUsuario/LoginUsuario.css
+++ b/src/Components/LoginUsuario/LoginUsuario.css
@@ -1,12 +1,14 @@
 .container-login {
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 100vh;
 }
 
-.coluna-esquerda {
+.coluna-esquerda-login {
   width: 50vw;
-  height: 90vh;
+  height: 95vh;
   background: url("principal.jpg");
   background-position: center center;
   border-radius: 30px;
@@ -14,7 +16,7 @@
   background-size: cover;
 }
 
-.coluna-direita {
+.coluna-direita-login {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -22,12 +24,13 @@
   background-color: #D9CCC5;
   border-radius: 30px;
   width: 50vw;
-  height: 90vh;
+  height: 95vh;
 }
 
-.titulo {
+.titulo-login {
+  color: #402718;
   font-weight: bolder;
-  margin-top: 12%;
+  margin-top: 5%;
 }
 
 .descricao-login {
@@ -35,13 +38,13 @@
   color: #A27A6B;
 }
 
-.titulo, .texto-cadastro {
+.titulo-login, .texto-cadastro {
   color: #261610;
 }
 
 .texto-cadastro {
   text-align: center;
-  margin: 25% 0 0 0;
+  margin: 10% 0 0 0;
 }
 
 .link-cadastro {
@@ -84,18 +87,26 @@
 /* Tablet */
 @media (max-width: 1023px) {
   .container-login {
+    height: fit-content;
+  }
+
+  .titulo-login {
+    margin-top: 10%;
+  }
+
+  .container-login {
     width: 100%;
     flex-direction: column;
   }
 
-  .coluna-esquerda {
+  .coluna-esquerda-login {
     border-radius: 0;
     width: 100vw;
     z-index: 0;
     margin: 0;
   }
 
-  .coluna-direita {
+  .coluna-direita-login {
     position: absolute;
     justify-content: flex-start;
     margin-bottom: -60%;
