--- a/src/Components/TelaInicial/TelaInicial.css
+++ b/src/Components/TelaInicial/TelaInicial.css
@@ -1,10 +1,12 @@
 .container-inicial {
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 100vh;
 }
 
-.coluna-esquerda {
+.coluna-esquerda-inicial {
   width: 50vw;
   height: 95vh;
   background: url("principal.jpg");
@@ -14,7 +16,7 @@
   background-size: cover;
 }
 
-.coluna-direita {
+.coluna-direita-inicial {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -25,9 +27,9 @@
   height: 95vh;
 }
 
-.titulo {
+.titulo-inicial {
+  color: #402718;
   font-weight: bolder;
-  margin: 12% 0 5% 0;
 }
 
 .descricao-inicial {
@@ -74,6 +76,31 @@
 	border-radius: 10px;
 	text-decoration: none !important;
 	width: 30vw;
+}
+
+@media (max-width: 1023px) {
+  .container-inicial {
+    height: fit-content;
+  }
+
+  .titulo-inicial {
+    margin-top: 10%;
+  }
+
+  .coluna-esquerda-inicial {
+    border-radius: 0;
+    width: 100vw;
+    z-index: 0;
+    margin: 0;
+  }
+
+  .coluna-direita-inicial {
+    position: absolute;
+    justify-content: flex-start;
+    margin-bottom: -60%;
+    width: 100%;
+    z-index: 1;
+  }
 }
 
 @media (max-width: 767px) {
