--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,9 @@
 :root {
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
   background-color: #D9CCC5;
+}
 
+:root, * {
   font-family: "Reem Kufi", sans-serif;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -49,7 +50,7 @@ button {
 }
 
 label {
-  color: #261610;
+  color: #402718;
   font-weight: bolder;
 }
 
@@ -66,13 +67,19 @@ input::placeholder {
   color: #8B6047;
 }
 
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus, 
+input:-webkit-autofill:active{
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: #C3ACA0;
+    transition: background-color 5000s ease-in-out 0s;
+    box-shadow: inset 0 0 70px 70px #8B6047;
+}
+
 .input-form {
   border: none;
   box-shadow: 2px 3px 7px #0000001d;
-}
-
-.input-outline {
-  border: 1px solid #402718;
 }
 
 .group-input {
