--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,8 @@
   background-color: #D9CCC5;
 }
 
-:root, * {
+:root,
+* {
   font-family: "Reem Kufi", sans-serif;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -21,7 +22,11 @@ body {
   }
 }
 
-h1, h2, h3, h4, p {
+h1,
+h2,
+h3,
+h4,
+p {
   margin: 0;
 }
 
@@ -54,7 +59,9 @@ label {
   font-weight: bolder;
 }
 
-input {
+input,
+select,
+textarea {
   background-color: #C3ACA0;
   border-radius: 10px;
   padding: 20px;
@@ -63,18 +70,20 @@ input {
   border: 1px solid #402718;
 }
 
-input::placeholder {
+input::placeholder,
+select::placeholder,
+textarea::placeholder {
   color: #8B6047;
 }
 
 input:-webkit-autofill,
-input:-webkit-autofill:hover, 
-input:-webkit-autofill:focus, 
-input:-webkit-autofill:active{
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: #C3ACA0;
-    transition: background-color 5000s ease-in-out 0s;
-    box-shadow: inset 0 0 70px 70px #8B6047;
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: #C3ACA0;
+  transition: background-color 5000s ease-in-out 0s;
+  box-shadow: inset 0 0 70px 70px #8B6047;
 }
 
 .input-form {
@@ -93,7 +102,9 @@ input:-webkit-autofill:active{
     font-size: 24px;
   }
 
-  input, button, .button-primary {
+  input,
+  button,
+  .button-primary {
     padding: 13px;
     font-size: 14px;
   }
