--- a/src/Components/Dashboard/Dashboard.css
+++ b/src/Components/Dashboard/Dashboard.css
@@ -28,7 +28,6 @@ h3 {
   border-radius: 10px;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
   width: 100%;
-  height: 100%;
   min-height: 175px;
 }
 
@@ -53,13 +52,18 @@ h3 {
 }
 
 .top-generos {
-  display: grid;
-  grid-template-columns: 2fr;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: column;
   background-color: #C3ACA0;
   border: 1px solid #261610;
-  padding: 1.5rem;
+  padding: 1.5rem 1.5rem 0 1.5rem;
   border-radius: 10px;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+  width: 100%;
+  height: max-content;
+  gap: 12px;
 }
 
 .card-grafico {
@@ -118,16 +122,12 @@ h3 {
 .terceira-linha {
   display: flex;
   width: 100%;
-  max-height: 180px;
   justify-content: space-between;
+  gap: 20px;
 }
 
 .valores {
   width: 16vw;
-}
-
-.top-generos {
-  width: 46vw;
 }
 
 .numeros-informativos {
@@ -145,8 +145,7 @@ h3 {
   border-right: 1px solid #402718;
   padding-right: 10%;
 }
-
-p {
+.subtitulo-generos {
   font-size: 16px;
 }
 
@@ -195,10 +194,6 @@ p {
     width: 100%;
   }
 
-  .top-generos {
-    width: 100%;
-  }
-
   #borda-lidos,
   #borda-nao-lidos {
     border-left: none;
@@ -210,5 +205,45 @@ p {
     padding-top: 30px;
     font-size: 24px;
   }
+}
 
+.lugares {
+  display: flex;
+  gap: 16px;
+}
+
+.lugar {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.primeiro {
+  height: 84px;
+}
+
+.segundo {
+  height: 63px;
+}
+
+.terceiro {
+  height: 47px;
+}
+
+.podio {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 10px 20px;
+  background-color: #B89B8D;
+  color: #402718;
+  font-size: 16px;
+}
+
+.medalha {
+  height: 40px;
+  width: 40px;
 }
