--- a/src/Components/ListaLivros/ListaLivros.css
+++ b/src/Components/ListaLivros/ListaLivros.css
@@ -56,6 +56,24 @@
   color: #402718;
 }
 
+.opcoes-livro {
+  display: flex;
+  margin-top: 20px;
+  gap: 10px;
+}
+
+.botao-acao {
+  display: flex;
+  padding: 10px;
+  border-radius: 100px;
+  border: 1px solid #402718;
+  background-color: #C3ACA0;
+}
+
+.botao-acao:hover {
+  background-color: #b59f94;
+}
+
 .paginacao-livros {
   display: flex;
   justify-content: center;
@@ -165,8 +183,7 @@
     font-size: 10px;
   }
 
-  .paginacao-livros,
-  .paginacao-livros button {
+  .paginacao-livros, .paginacao-livros button {
     font-size: 12px;
   }
 
@@ -182,4 +199,89 @@
   .paginacao-livros button {
     padding: 14px 20px;
   }
+}
+
+.modal-edicao {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.6);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 999;
+}
+
+.conteudo-modal form {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.botoes-modal {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 10px;
+  margin-top: 1rem;
+}
+
+.botoes-modal > .button-primary{
+  margin-top: 0;
+}
+
+.modal-confirmacao,
+.mensagem-sucesso {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 999;
+}
+
+.conteudo-modal {
+  background: #D9CCC5;
+  padding: 20px;
+  border-radius: 10px;
+  max-width: 400px;
+  width: 90%;
+}
+
+.mensagem-sucesso {
+  background: rgba(0, 0, 0, 0.3);
+  justify-content: center;
+  align-items: flex-start;
+  padding-top: 50px;
+  font-size: 16px;
+}
+
+.mensagem-sucesso > div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #dff0d8;
+  color: #3c763d;
+  padding: 10px 20px;
+  border-radius: 6px;
+  font-weight: bold;
+  font-size: 24px;
+}
+
+.titulo-modal {
+  color: #402718;
+  text-align: center;
+  margin: 10px 0;
+}
+
+.titulo-livro-modal {
+  color: #8C5B30;
+  text-align: center;
+  font-size: 32px;
+  margin: 10px 0 50px 0;
 }
