--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -5,25 +5,32 @@
     margin-top: 2%;
 }
 
-#botao-voltar {
+.botao-voltar {
     border: 2px solid #402718;
     border-radius: 10px;
-    padding: 10px 22px 10px 22px;
+    padding: 14px 22px;
     color: #402718;
     display: flex;
     align-items: center;
+    font-weight: bolder;
     gap: 15px;
     text-decoration: none;
 }
 
-#botao-saida {
+.botao-saida {
     border: 2px solid #402718;
     border-radius: 200px;
-    padding: 10px;
     display: flex;
     align-items: center;
     justify-content: center;
     text-decoration: none;
+    width: 50px;
+    height: 50px;
+}
+
+.icon-sair {
+    width: 30px;
+    height: 30px;
 }
 
 .superior {
@@ -31,4 +38,27 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
+
+@media (max-width: 1023px) {
+    .header-superior {
+        margin-top: 27px;
+        margin-bottom: 10%;
+    }
+
+    .botao-voltar {
+        padding: 12px 10px;
+        font-size: 12px;
+        gap: 6px;
+    }
+
+    .botao-saida {
+        width: 30px;
+        height: 30px;
+    }
+
+    .icon-sair {
+        width: 18px;
+        height: 18px;
+    }
 }
